# exp_course_multi_robot

./: .gitignore  README.md  多机实验平台使用手册.txt
.devcontainer/: devcontainer.json  my_ros_noetic.Dockerfile
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/: CMakeLists.txt  package.xml
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/include/: gazebo_swarm_robot_control.h
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/launch/: gazebo_swarm_robot_1.launch  gazebo_swarm_robot_5.launch  gazebo_swarm_robot_6.launch  gazebo_swarm_robot_8.launch
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/scripts/: gazebo_swarm_robot_control.py  gazebo_swarm_robot_control_angle.py  gazebo_swarm_robot_control_line.py  gazebo_swarm_robot_control_u.py
src/gazebo_swarm_robot_pkgs/gazebo_swarm_robot_tb3/src/: gazebo_swarm_robot_control.cpp  gazebo_swarm_robot_control_angle.cpp  gazebo_swarm_robot_control_circle.cpp  gazebo_swarm_robot_control_l.cpp  gazebo_swarm_robot_control_lw.cpp  gazebo_swarm_robot_control_move_6.cpp  gazebo_swarm_robot_control_simple.cpp  gazebo_swarm_robot_control_triangle.cpp  gazebo_swarm_robot_control_u.cpp
src/swarm_robot_pkgs/aruco_detection/: CMakeLists.txt  package.xml
src/swarm_robot_pkgs/aruco_detection/camera_param/: base_marker.yml  d435.ini  d435.yml  sr300.ini  sr300.yml
src/swarm_robot_pkgs/aruco_detection/include/: aruco_detection.h
src/swarm_robot_pkgs/aruco_detection/launch/: aruco_detection.launch
src/swarm_robot_pkgs/aruco_detection/msg/: aruco_info.msg
src/swarm_robot_pkgs/aruco_detection/src/: aruco_detection.cpp  main.cpp
src/swarm_robot_pkgs/swarm_robot_tb3/: CMakeLists.txt  package.xml
src/swarm_robot_pkgs/swarm_robot_tb3/include/: swarm_robot_control.h
src/swarm_robot_pkgs/swarm_robot_tb3/scripts/: swarm_robot_control.py  swarm_robot_control_angle.py  swarm_robot_control_u.py
src/swarm_robot_pkgs/swarm_robot_tb3/src/: swarm_robot_control.cpp  swarm_robot_control_angle.cpp  swarm_robot_control_u.cpp
