<?xml version="1.0"?>
<package format="2">
  <name>aruco_detection</name>
  <version>0.0.1</version>
  <description>The aruco_detection package</description>
  <maintainer email="chaiziqi@sjtu.edu.cn">chaiziqi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>camera_calibration_parsers</depend>
</package>
